--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
       run: cargo build --verbose
     
     - uses: actions/cache@v3
+    - name: Cache build
       with:
         path: |
           ~/.cargo/bin/
