--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -40,7 +40,18 @@ jobs:
 
       - name: Install required cargo
         run: cargo install clippy-sarif sarif-fmt
-
+      
+      - uses: actions/cache@v3
+      - name: Cache Result
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      
       - name: Run rust-clippy
         run:
           cargo clippy
