--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Build
       run: cargo build --verbose
     
-    - uses: actions/cache@v3
     - name: Cache build
+      uses: actions/cache@v3
       with:
         path: |
           ~/.cargo/bin/
