--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,11 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
     
     - name: Cache build
       uses: actions/cache@v3
+      id: cargo-cache
       with:
         path: |
           ~/.cargo/bin/
@@ -29,6 +28,10 @@ jobs:
           ~/.cargo/git/db/
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    
+    - if: ${{ steps.cargo-cache.outputs.cache-hit != 'true' }}
+      name: Build
+      run: cargo build --verbose
         
     - name: Run tests
       run: cargo test --verbose
