--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,3 +12,4 @@ copy_dir = "0.1.2"
 home = "0.5.5"
 serde = { version = "1.0.163", features = ["derive"]}
 thiserror = "1.0.40"
+clap_complete = "4.3.1"
