--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.1", features = ["derive"] }
-confy = "0.5.1"
-copy_dir = "0.1.2"
-home = "0.5.5"
-serde = { version = "1.0.163", features = ["derive"]}
-thiserror = "1.0.40"
-clap_complete = "4.3.1"
+core = { workspace = true }
+constants = { workspace = true }
+app_error = { workspace = true }
+config = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+confy = { workspace = true }
+copy_dir = { workspace = true }
+home = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+thiserror = { workspace = true }
+clap_complete = { workspace = true }
