--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 # [package]
 # name = "templateR"
 # version = "0.1.0"
-# edition = "2021"
 #
 # [dependencies]
 # clap = { version = "4.3.1", features = ["derive"] }
@@ -13,7 +12,6 @@
 #
 [workspace]
 members = ["templater", "cli", "core", "app_error", "constants", "config"]
-
 
 [workspace.dependencies]
 core = { path = "./core" }
@@ -28,6 +26,11 @@ home = "0.5.5"
 serde = { version = "1.0.163", features = ["derive"] }
 thiserror = "1.0.40"
 clap_complete = "4.3.2"
+
+[workspace.package]
+version = "0.1.0"
+authors = ["andreishark"]
+edition = "2021"
 
 # [[bin]]
 # name = "bin"
