Added remote clone template

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,3 +12,7 @@ config = { workspace = true }
 constants = { workspace = true }
 copy_dir = { workspace = true }
 confy = { workspace = true }
+git2 = { workspace = true }
+http = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
