--- a/app_error/Cargo.toml
+++ b/app_error/Cargo.toml
@@ -9,3 +9,6 @@ authors.workspace = true
 [dependencies]
 thiserror = { workspace = true }
 confy = { workspace = true }
+git2 = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
