--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,3 +18,4 @@ home = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 clap_complete = { workspace = true }
+http = { workspace = true }
