--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.103"
 version = "0.1.0"
 authors = ["andreishark"]
 edition = "2021"
+app_name = "templateR"
 
 # [[bin]]
 # name = "bin"
