--- a/app_error/Cargo.toml
+++ b/app_error/Cargo.toml
@@ -12,3 +12,4 @@ confy = { workspace = true }
 git2 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+http = { workspace = true }
