Added io provider and git provider
The git provider is unfinished and should not be used. Also the code cannot be compiled at this moment.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,3 +16,4 @@ git2 = { workspace = true }
 http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+tempdir = { workspace = true }
