--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ home = "0.5.5"
 serde = { version = "1.0.163", features = ["derive"] }
 thiserror = "1.0.40"
 clap_complete = "4.3.2"
-git2 = "0.17.2"
+git2 = "0.18.0"
 http = "0.2.9"
 serde_json = "1.0.103"
+tempdir = "0.3.7"
 
 [workspace.package]
 version = "0.1.0"
